[tool.poetry]
name = "awstemp"
version = "0.2.0"
description = "Console role switching for AWS command line"
license = "GPL-3.0"
authors = ["Ian Collar <ian.collar@secretescapes.com>"]
readme = "README.md"
repository = "https://github.com/secretescapes/awstemp"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"Intended Audience :: System Administrators",
	"Natural Language :: English",
	"Operating System :: POSIX :: Linux",
	"Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.17.110"
argcomplete = "^1.12.3"
configparser = "^5.0.2"
humanize = "^3.10.0"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.9.3"
black = "^21.6b0"
tox = "^3.24.0"
pytest-cov = "^2.12.1"
pytest-env = "^0.6.2"
tox-pyenv = "^1.1.0"
isort = "^5.9.2"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."console_scripts"]
awstemp = "awstemp.cli:main"
